@@ -1,3 +1,6 @@
+2009-03-28
+	* new function of RQDA2tm (contributed by J-P Mueller).
+	
 2009-03-22
 	* add memo of attributes table.
 
